--- a/src/app/components/customers/customers.component.scss
+++ b/src/app/components/customers/customers.component.scss
@@ -10,6 +10,19 @@ table {
     }
 }
 
+.no-data-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 16px;
+    i {
+        color: var(--error-col);
+        font-size: 32px;
+    }
+}
+
 .add-customer-btn {
     position: absolute;
     right: 32px;
