move forgot password to dialog and delete old component

--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
@@ -8,7 +8,7 @@
         margin: 0;
     }
     i {
-        color: var(--error-col);
+        color: var(--gray-col);
         font-size: 32px;
     }
 }
