--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="this.firestoreService.customers" class="mat-elevation-z8">
+<table mat-table [dataSource]="this.dataSource">
     <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef>First Name</th>
         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
@@ -18,12 +18,13 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openCustomerDetails(row.customerId)">
     </tr>
 </table>
+<mat-paginator [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
 
-<div class="no-data-wrapper" *ngIf="this.firestoreService.customers.length < 1">
+<!-- <div class="no-data-wrapper" *ngIf="this.firestoreService.customers.length < 1">
     <i class="material-icons">report</i>
     <span>No data available yet!</span>
     <span>Add customers to view data.</span>
-</div>
+</div> -->
 
 <button (click)="openAddCustomerDialog()" mat-fab color="primary" class="add-customer-btn" matTooltip="Add customer">
     <mat-icon>add</mat-icon>
