--- a/src/app/components/customer-detail/customer-detail.component.html
+++ b/src/app/components/customer-detail/customer-detail.component.html
@@ -80,7 +80,7 @@
 
     <div class="customer-actions">
         <button (click)="this.utils.redirectToCustomers()" color="basic" mat-mini-fab title="Back">
-            <mat-icon>arrow_back</mat-icon>
+            <mat-icon>navigate_before</mat-icon>
         </button>
         <button (click)="openEditCustomerDialog()" color="primary" mat-raised-button title="Edit">Edit</button>
         <button (click)="openDeleteCustomerDialog()" color="warn" mat-raised-button title="Delete">Delete</button>
