--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -6,6 +6,14 @@ mat-drawer {
     width: 300px;
 }
 
+mat-toolbar {
+    background-color: var(--gray-col) !important;
+}
+
+.nav-icon {
+    color: var(--gray-col) !important;
+}
+
 .sidenav-logo-container {
     display: flex;
     justify-content: center;
@@ -42,6 +50,12 @@ mat-drawer {
     justify-content: space-between;
 }
 
+.toolbar-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .toolbar-right {
     display: flex;
     align-items: center;
@@ -53,6 +67,9 @@ mat-drawer {
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 2px;
+        border-radius: 50%;
+        background-color: white;
     }
 }
 
