--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -15,7 +15,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openCustomerDetails(row.customerId)">
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openCustomerDetails(row.id)">
     </tr>
 </table>
 <mat-paginator [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
