add sort function to customers table

--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,16 +1,16 @@
-<table mat-table [dataSource]="this.dataSource">
+<table mat-table [dataSource]="this.dataSource" matSort>
     <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef>First Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef>Last Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</th>
         <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateOfBirth">
-        <th mat-header-cell *matHeaderCellDef>Date of Birth</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</th>
         <td mat-cell *matCellDef="let element" matTooltip="MM/DD/YYYY"> {{this.utils.convertTimestampToDate(element.dateOfBirth)}} </td>
     </ng-container>
 
