--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,9 +1,9 @@
-<mat-form-field>
+<mat-form-field *ngIf="!this.noData" appearance="fill">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Filter by name" #input>
 </mat-form-field>
 
-<table mat-table [dataSource]="this.dataSource" matSort>
+<table *ngIf="!this.noData" mat-table [dataSource]="this.dataSource" matSort>
     <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
@@ -23,14 +23,14 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openCustomerDetails(row.id)">
     </tr>
 </table>
-<mat-paginator [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
+<mat-paginator *ngIf="!this.noData" [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
 
-<!-- <div class="no-data-wrapper" *ngIf="this.firestoreService.customers.length < 1">
+<mat-card class="no-data-card" *ngIf="this.noData">
     <i class="material-icons">report</i>
     <span>No data available yet!</span>
     <span>Add customers to view data.</span>
-</div> -->
+</mat-card>
 
 <button (click)="openAddCustomerDialog()" mat-fab color="primary" class="add-customer-btn" matTooltip="Add customer">
-    <mat-icon>add</mat-icon>
+        <mat-icon>add</mat-icon>
 </button>
