--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div class="content">
+    <mat-card class="header-card" *ngIf="authService.userData as user">
+        <img class="profile-picture" src="{{(user.photoURL) ? user.photoURL : './../../../assets/img/blank_profile_picture.svg'}}" alt="{{user.displayName}}">
+        <h1>Welcome <strong>{{(user.displayName) ? user.displayName : 'User'}}!</strong></h1>
+    </mat-card>
+
+    <mat-card>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam voluptate accusamus voluptas. Tempore inventore maxime corporis voluptates. Suscipit quos laboriosam tempora exercitationem ratione assumenda iste molestiae! Mollitia, neque in.
+    </mat-card>
+</div>
