--- a/src/app/components/dialog-edit-user/dialog-edit-user.component.scss
+++ b/src/app/components/dialog-edit-user/dialog-edit-user.component.scss
@@ -1,3 +1,17 @@
+.mat-dialog-header {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 16px;
+    h1 {
+        margin: 0;
+    }
+    i {
+        color: var(--gray-col);
+        font-size: 32px;
+    }
+}
+
 .mat-dialog-content {
     display: flex;
     flex-direction: column;
@@ -12,7 +26,7 @@
     transition: all 75ms ease-in-out;
     &:hover {
         cursor: pointer;
-        background-color: #E8EBF6;
+        background-color: #ececec;
         img {
             opacity: 0.1;
         }
@@ -21,8 +35,8 @@
         }
     }
     img {
-        width: 96px;
-        height: 96px;
+        width: 56px;
+        height: 56px;
         border-radius: 50%;
     }
     i {
@@ -31,10 +45,6 @@
         top: 50%;
         left: 50%;
         opacity: 0;
-        color: var(--primary-col);
+        color: var(--gray-col);
     }
-}
-
-small {
-    color: var(--warn-col);
 }
