--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -44,7 +44,7 @@
                     </button>
                     <button (click)="this.openEditUserDialog()" mat-menu-item>
                         <mat-icon>edit</mat-icon>
-                        <span>Edit Profile</span></button>
+                        <span>Edit User</span></button>
                     <button (click)="this.authService.logOut()" mat-menu-item>
                         <mat-icon>logout</mat-icon>
                         <span>Log Out</span>
