make main route unreachable and more style improvements

--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
@@ -4,5 +4,8 @@
 </div>
 
 <div mat-dialog-content>
-    <button routerLink="/main" (click)="this.dialogRef.close()" color="primary" mat-raised-button>Continue to main page</button>
+    <button routerLink="/main/dashboard" (click)="this.dialogRef.close()" color="primary" mat-raised-button>
+        <mat-icon>login</mat-icon>
+        <span>Go to Dashboard</span>
+    </button>
 </div>
