--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
@@ -9,7 +9,13 @@
     }
     i {
         color: var(--gray-col);
-        font-size: 32px;
+        font-size: 56px;
+    }
+}
+
+button {
+    mat-icon {
+        margin-right: 8px;
     }
 }
 
