--- a/src/app/components/dialog-guest-user/dialog-guest-user.component.scss
+++ b/src/app/components/dialog-guest-user/dialog-guest-user.component.scss
@@ -1,3 +1,17 @@
+.mat-dialog-header {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 16px;
+    h1 {
+        margin: 0;
+    }
+    i {
+        color: var(--gray-col);
+        font-size: 32px;
+    }
+}
+
 form {
     display: flex;
     flex-direction: column;
