add clock component and implement it on dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,4 +7,6 @@
     <mat-card>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam voluptate accusamus voluptas. Tempore inventore maxime corporis voluptates. Suscipit quos laboriosam tempora exercitationem ratione assumenda iste molestiae! Mollitia, neque in.
     </mat-card>
+
+    <app-clock></app-clock>
 </div>
