--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,3 +19,9 @@
     height: 96px;
     border-radius: 50%;
 }
+
+.time-and-date {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
