--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -8,5 +8,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quam voluptate accusamus voluptas. Tempore inventore maxime corporis voluptates. Suscipit quos laboriosam tempora exercitationem ratione assumenda iste molestiae! Mollitia, neque in.
     </mat-card>
 
-    <app-clock></app-clock>
+    <div class="time-and-date">
+        <app-clock></app-clock>
+        <app-calendar></app-calendar>
+    </div>
+
 </div>
