add missing link to customers

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
         </div>
         <p>You have <span #customersAmount></span> customers.</p>
         <mat-card-actions>
-            <button mat-raised-button color="basic">View all</button>
+            <button [routerLink]="'/main/customers'" mat-raised-button color="basic">View all</button>
         </mat-card-actions>
     </mat-card>
 
