style improvements to dialogs

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
             <i class="material-icons">person</i>
             <h2>Your Customers</h2>
         </div>
-        <p>You have <span #customersAmount></span> customers.</p>
+        <p>You have a total of <strong #customersAmount></strong> customers.</p>
         <mat-card-actions>
             <button [routerLink]="'/main/customers'" mat-raised-button color="basic">View all</button>
         </mat-card-actions>
