--- a/src/app/components/dialog-delete-customer/dialog-delete-customer.component.html
+++ b/src/app/components/dialog-delete-customer/dialog-delete-customer.component.html
@@ -1,6 +1,8 @@
 <div class="dialog-wrapper">
-    <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate" class="dialog-progress-bar"></mat-progress-bar>
-    <h1 mat-dialog-title>Delete Customer</h1>
+    <div class="mat-dialog-header">
+        <i class="material-icons">delete</i>
+        <h1 mat-dialog-title>Delete Customer</h1>
+    </div>
     <div mat-dialog-content>
         <p>Are you sure you wan't to delete this customer?</p>
     </div>
