--- a/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
+++ b/src/app/components/dialog-edit-customer/dialog-edit-customer.component.html
@@ -1,6 +1,8 @@
 <div class="dialog-wrapper">
-    <mat-progress-bar *ngIf="this.firestoreService.loading" mode="indeterminate" class="dialog-progress-bar"></mat-progress-bar>
-    <h1 mat-dialog-title>Edit Customer</h1>
+    <div class="mat-dialog-header">
+        <i class="material-icons">edit</i>
+        <h1 mat-dialog-title>Edit Customer</h1>
+    </div>
     <div mat-dialog-content>
         <form [formGroup]="editCustomerForm" (ngSubmit)="onSubmit()">
             <fieldset>
