add legal-notice to all necessary components

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,4 +34,7 @@
             <button mat-raised-button (click)="this.openGuestUserDialog()" title="Login as guest">Login as guest</button>
         </div>
     </div>
+    <div class="legal-notice-wrapper">
+        <a class="auth-link" [routerLink]="'/legal-notice'">Imprint | Privacy Policy</a>
+    </div>
 </div>
