--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -75,3 +75,9 @@ form {
         color: #5a68b9;
     }
 }
+
+.legal-notice-wrapper {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+}
