--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -33,4 +33,7 @@
         </button>
         </div>
     </div>
+    <div class="legal-notice-wrapper">
+        <a class="auth-link" [routerLink]="'/legal-notice'">Imprint | Privacy Policy</a>
+    </div>
 </div>
