--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -52,6 +52,12 @@
     }
 }
 
+.legal-notice-wrapper {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+}
+
 form {
     display: flex;
     flex-direction: column;
