--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -22,6 +22,9 @@
                     <span>Log Out</span>
                 </a>
             </mat-list-item>
+            <div class="legal-notice-wrapper">
+                <a class="auth-link" [routerLink]="'/legal-notice'">Imprint | Privacy Policy</a>
+            </div>
         </mat-nav-list>
     </mat-drawer>
     <div class="example-sidenav-content">
