--- a/src/app/components/verify-email/verify-email.component.html
+++ b/src/app/components/verify-email/verify-email.component.html
@@ -14,4 +14,7 @@
             </mat-card-content>
         </mat-card>
     </div>
+    <div class="legal-notice-wrapper">
+        <a class="auth-link" [routerLink]="'/legal-notice'">Imprint | Privacy Policy</a>
+    </div>
 </div>
