--- a/src/app/components/verify-email/verify-email.component.scss
+++ b/src/app/components/verify-email/verify-email.component.scss
@@ -41,3 +41,9 @@
 .verify-email-content {
     text-align: center;
 }
+
+.legal-notice-wrapper {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+}
