--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -74,3 +74,10 @@ mat-toolbar {
 .router-outlet-container {
     padding: 16px 64px;
 }
+
+.legal-notice-wrapper {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    bottom: 16px;
+    left: 50%;
+}
