change up-btn color

--- a/src/app/components/legal-notice/legal-notice.component.scss
+++ b/src/app/components/legal-notice/legal-notice.component.scss
@@ -6,7 +6,7 @@
     position: fixed;
     right: 32px;
     bottom: 32px;
-    background-color: var(--primary-col) !important;
+    background-color: var(--gray-col) !important;
 }
 
 h1,
