--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.scss
@@ -6,6 +6,7 @@
     margin-bottom: 16px;
     h1 {
         margin: 0;
+        text-align: center;
     }
     i {
         color: var(--gray-col);
