--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -81,3 +81,135 @@ form {
     right: 16px;
     bottom: 16px;
 }
+
+@media (max-width: 360px) {
+    .content {
+        flex-direction: column;
+    }
+    .left-section {
+        width: 100%;
+        height: 25%;
+        background-size: auto;
+    }
+    .right-section {
+        width: 100%;
+        height: 75%;
+        gap: 32px;
+        margin-top: -64px;
+        h2 {
+            background-color: white;
+            border-radius: 8px 8px;
+            padding: 4px 16px;
+            line-height: 64px;
+        }
+    }
+    .login-wrapper {
+        gap: 16px;
+    }
+    .password-wrapper {
+        a {
+            bottom: 0px;
+        }
+    }
+    .sign-up-wrapper {
+        margin-top: -14px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-50%, -50%);
+        right: unset;
+        bottom: 8px;
+        left: 50%;
+    }
+}
+
+@media (min-width: 360px) {
+    .content {
+        flex-direction: column;
+    }
+    .left-section {
+        width: 100%;
+        height: 25%;
+        background-size: auto;
+    }
+    .right-section {
+        width: 100%;
+        height: 75%;
+        gap: 32px;
+        margin-top: -64px;
+        h2 {
+            background-color: white;
+            border-radius: 8px 8px;
+            padding: 4px 16px;
+            line-height: 64px;
+        }
+    }
+    .login-wrapper {
+        gap: 16px;
+    }
+    .password-wrapper {
+        a {
+            bottom: 0px;
+        }
+    }
+    .sign-up-wrapper {
+        margin-top: -14px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-50%, -50%);
+        right: unset;
+        bottom: 8px;
+        left: 50%;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    .content {
+        flex-direction: row;
+    }
+    .left-section {
+        width: 40%;
+        height: 100%;
+        background-size: cover;
+    }
+    .right-section {
+        width: 60%;
+        height: 100%;
+        gap: 64px;
+        margin-top: 0px;
+        h2 {
+            background-color: white;
+            border-radius: 8px 8px;
+            padding: 4px 16px;
+            line-height: 64px;
+        }
+    }
+    .login-wrapper {
+        gap: 32px;
+    }
+    .password-wrapper {
+        a {
+            bottom: -14px;
+        }
+    }
+    .sign-up-wrapper {
+        margin-top: -20px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-0%, -0%);
+        right: 16px;
+        left: unset;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {}
