--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -21,7 +21,7 @@
     h2 {
         background-color: white;
         border-radius: 8px 8px;
-        padding: 4px 16px;
+        padding: 0px 16px;
         line-height: 64px;
     }
 }
@@ -171,12 +171,6 @@ form {
         height: 100%;
         gap: 64px;
         margin-top: 0px;
-        h2 {
-            background-color: white;
-            border-radius: 8px 8px;
-            padding: 4px 16px;
-            line-height: 64px;
-        }
     }
     .login-wrapper {
         gap: 32px;
@@ -192,6 +186,7 @@ form {
     .legal-notice-wrapper {
         transform: translate(-0%, -0%);
         right: 16px;
+        bottom: 16px;
         left: unset;
     }
 }
