--- a/src/app/components/verify-email/verify-email.component.scss
+++ b/src/app/components/verify-email/verify-email.component.scss
@@ -1,8 +1,5 @@
 .content {
     display: flex;
-    // flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .right-section {
@@ -12,7 +9,14 @@
     align-items: center;
     gap: 64px;
     width: 60%;
-    height: 100%
+    height: 100%;
+    h2 {
+        background-color: white;
+        border-radius: 8px 8px;
+        padding: 0px 16px;
+        line-height: 64px;
+        text-align: center;
+    }
 }
 
 .left-section {
@@ -47,3 +51,95 @@
     right: 16px;
     bottom: 16px;
 }
+
+@media (max-width: 360px) {
+    .content {
+        flex-direction: column;
+    }
+    .left-section {
+        width: 100%;
+        height: 25%;
+        background-size: auto;
+    }
+    .right-section {
+        width: 100%;
+        height: 75%;
+        gap: 32px;
+        margin-top: -64px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-50%, -50%);
+        right: unset;
+        bottom: 8px;
+        left: 50%;
+    }
+    mat-card {
+        box-shadow: none !important;
+    }
+}
+
+@media (min-width: 360px) {
+    .content {
+        flex-direction: column;
+    }
+    .left-section {
+        width: 100%;
+        height: 25%;
+        background-size: auto;
+    }
+    .right-section {
+        width: 100%;
+        height: 75%;
+        gap: 32px;
+        margin-top: -64px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-50%, -50%);
+        right: unset;
+        bottom: 8px;
+        left: 50%;
+    }
+    mat-card {
+        box-shadow: none !important;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    .content {
+        flex-direction: row;
+    }
+    .left-section {
+        width: 40%;
+        height: 100%;
+        background-size: cover;
+    }
+    .right-section {
+        width: 60%;
+        height: 100%;
+        gap: 64px;
+        margin-top: 0px;
+    }
+    .legal-notice-wrapper {
+        transform: translate(-0%, -0%);
+        right: 16px;
+        bottom: 16px;
+        left: unset;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    mat-card {
+        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important;
+    }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {}
