responsive design toolbar part 2

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -89,6 +89,9 @@ mat-toolbar {
     .toolbar-right {
         gap: 0px;
     }
+    .router-outlet-container {
+        padding: 16px 16px;
+    }
 }
 
 @media (min-width: 360px) {
@@ -97,6 +100,9 @@ mat-toolbar {
     }
     .toolbar-right {
         gap: 0px;
+    }
+    .router-outlet-container {
+        padding: 16px 16px;
     }
 }
 
@@ -108,4 +114,27 @@ mat-toolbar {
     .toolbar-right {
         gap: 16px;
     }
+    .router-outlet-container {
+        padding: 16px 32px;
+    }
 }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .router-outlet-container {
+        padding: 16px 48px;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .router-outlet-container {
+        padding: 16px 64px;
+    }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {}
