responsive design dashboard, clock and calendar

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -22,3 +22,47 @@
     align-items: center;
     font-weight: 500;
 }
+
+@media (max-width: 360px) {
+    .calendar {
+        width: 112px;
+        height: 112px;
+    }
+}
+
+@media (min-width: 360px) {
+    .calendar {
+        width: 112px;
+        height: 112px;
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    .calendar {
+        width: 128px;
+        height: 128px;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .calendar {
+        width: 144px;
+        height: 144px;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .calendar {
+        width: 160px;
+        height: 160px;
+    }
+}
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {}
+
+// XX-Large devices (larger desktops, 1400px and up)
+@media (min-width: 1400px) {}
