--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -9,6 +9,9 @@
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    h1 {
+        text-align: center;
+    }
     strong {
         color: var(--gray-col);
     }
