--- a/src/app/components/dialog-add-customer/dialog-add-customer.component.html
+++ b/src/app/components/dialog-add-customer/dialog-add-customer.component.html
@@ -24,7 +24,7 @@
                             * Please enter a last name
                         </mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="fill">
+                    <mat-form-field class="dob-form-field" appearance="fill">
                         <mat-label>Date of Birth</mat-label>
                         <input formControlName="dateOfBirth" matInput [matDatepicker]="picker" placeholder="MM/DD/YYYY" required>
                         <mat-hint>MM/DD/YYYY</mat-hint>
@@ -63,7 +63,7 @@
                             * Please enter a city
                         </mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="fill">
+                    <mat-form-field class="country-form-field" appearance="fill">
                         <mat-label>Country</mat-label>
                         <input formControlName="country" type="text" matInput required>
                         <mat-icon matSuffix>flag</mat-icon>
@@ -92,7 +92,7 @@
                             * Please enter an email address
                         </mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="fill">
+                    <mat-form-field class="website-form-field" appearance="fill">
                         <mat-label>Website</mat-label>
                         <input formControlName="website" type="text" matInput>
                         <mat-icon matSuffix>language</mat-icon>
