show loading screen while loading or an auth process is running

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<router-outlet></router-outlet>
-<app-loading-screen></app-loading-screen>
+<router-outlet *ngIf="!this.utils.loading && !this.authService.authProcessing"></router-outlet>
+<app-loading-screen *ngIf="this.utils.loading || this.authService.authProcessing"></app-loading-screen>
